--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "debug",
             "program": "${workspaceRoot}/src/cmd/main.go",
             "env": {
-                "ENV": "groot"
+                "ENV": "worker"
             },
             "args": []
         }
